--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesalo1223</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Gadson</title>
 </head>
+
 <body>
-    <h1>Hell World!</h1>
-    <h2>Today is sunny</h2>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About me</a></li>
+            <li><a href="#">Program</a></li>
+            <li><a href="#">Skills</a></li>
+        </ul>
+    </nav>
+    <section class="body">
+        <h1>My own website</h1>
+
+        <p>teh begining of learning process</p>
+    </section>
 </body>
+
 </html>
