--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
             <li><a href="#">Skills</a></li>
         </ul>
     </nav>
-    <section class="body">
-        <h1>My own website</h1>
+    <section class="body">to be professional website
+        <h1>My own website.</h1>
 
-        <p>teh begining of learning process</p>
+        <p>teh begining of learning process i gadison maloi i m a developer software engineeringg</p>
+        <img src="/images/images.jpeg" alt="Gadson Maloi">
+
+    </section>entaisere e kenya
+
+    <section>
+        &copy; Allrights reserved by Lesalon
     </section>
 </body>
 
